# melkor

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  config.yml  feature.yml  feature_request.yml  format-compatibility.yml  performance.yml
.github/workflows/: ci.yml  release-candidate.yml
.superstack/: build-context.md  melkor-2.0.0-rc1-readiness.html  melkor-product-review-2026-07-10.html  melkor-sota-review-2026-07-10.html
DA3coreml/: README.md  pyproject.toml
DA3coreml/coreml/: Package.swift  README.md
DA3coreml/coreml/Scripts/: build_da3_coreml.sh  convert_cam_dec.py  convert_cam_enc.py  convert_dinov2_backbone.py  convert_dinov2_from_checkpoint.py  convert_dinov3_vit.py  convert_dualdpt_head.py  convert_dualdpt_to_coreml.py  convert_gs_head.py  download_models.sh  run_inference.sh  sample_images.py  setup_da3_coreml.sh  test_da3_pytorch.py  validate_dualdpt_export.py
DA3coreml/da3_streaming/loop_utils/: loop_detector.py  sim3loop.py  (+1 more)
DA3coreml/docs/: API.md  BENCHMARK.md  CLI.md
benchmarks/: README.md
benchmarks/datasets/: manifest.json
benchmarks/manifests/: format-roundtrip-v1.json
benchmarks/schema/: benchmark-manifest-v1.schema.json  benchmark-result-v1.schema.json
cmake/: MelkorConfig.cmake.in  MelkorVersion.cmake
docs/: DA3_FEEDFORWARD.md  FEEDFORWARD_SOTA.md  GLOMAP_WRAPPER.md  GSPLAT_CUDA.md  INSPECT.md  LICHTFELD_WRAPPER.md  OPENSPLAT_WRAPPER.md  PIPELINE.md  QUICKSTART.md  RELEASE.md  SCENE_COMPLETION.md  STREAMING.md
docs/adapters/: index.md
docs/audit/: HANDOFF.md  baseline-20260714.md  production-blockers.md  remaining-work-roadmap.md  shipping-surface-review-20260715.md  takeover-20260715.md  v2-progress.md  v2-review-baseline.md
docs/maintainers/: updating-khr-gaussian-splatting.md
docs/migrations/: 2.0-glomap-to-colmap-global.md  v1-to-v2.md
docs/reference/: canonical-semantics.md  loss-policy.md  resource-limits.md
docs/security/: threat-model.md
fuzz/: fuzz_glb.cpp  fuzz_gltf_khr.cpp  fuzz_ply.cpp  fuzz_spz.cpp  replay.hpp
fuzz/corpus/: README.md
include/melkor/: backend_registry.hpp  budget.hpp  checked.hpp  cloud_inspector.hpp  compute_provider.hpp  cuda_compute.hpp  densifier.hpp  enhanced_converter.hpp  error.hpp  feedforward_model.hpp  gaussian_data.hpp  gaussian_fitter.hpp  glb_reader.hpp  limits.hpp  metal_compute.hpp  ply_writer.hpp  provenance.hpp  scene.hpp  spatial_grid.hpp  spz_encoder.hpp  version.h.in
ml-sharp/: .gitignore  README.md
profiles/gltf/: khr-gaussian-splatting-rc-63770cc.json
profiles/ply/: generic-point-cloud-v1.json  graphdeco-3dgs-v1.json  melkor-canonical-v1.json
profiles/spz/: spz-v4.json
release/: README.md  components.json
schemas/: format-profile.schema.json  loss-report-v1.schema.json  provenance-v1.schema.json
scripts/: build_release_evidence.py  glomap_wrapper.sh  lichtfeld_wrapper.sh  opensplat_wrapper.sh  pipeline.sh  setup_all.sh  setup_da3.sh  setup_deps.sh  setup_feedforward.sh  setup_feedforward_sota.sh  setup_glomap.sh  setup_gsplat_cuda.sh  setup_gsplat_mps.sh  setup_lichtfeld.sh  setup_opensplat.sh  setup_streaming.sh  test_sdk_install.sh  train_from_images.sh
src/: cloud_inspector.cpp  convert_command.cpp  convert_command.hpp  cpu_compute_provider.cpp  densifier.cpp  enhanced_converter.cpp  feedforward_model.cpp  gaussian_data.cpp  glb_reader.cpp  gltf_scene_utils.hpp  gpu_stub.cpp  inspect_command.cpp  inspect_command.hpp  main.cpp  ply_writer.cpp  safe_gltf_fs.hpp  safe_text.hpp  spatial_grid.cpp  spz_encoder.cpp
src/c_api/: melkor_c.cpp
src/core/: backend_registry.cpp  budget.cpp  checked.cpp  error.cpp  limits.cpp  provenance.cpp  scene.cpp
src/cuda/: cuda_compute.cpp  cuda_compute_provider.cpp  gaussian_processor.cu
src/formats/: format_id.cpp  glb_container.cpp  gltf_accessor.cpp  gltf_document.cpp  gltf_extensions.cpp  gltf_khr.cpp  gltf_reader.cpp  gltf_resolve.cpp  gltf_transform.cpp  gltf_writer.cpp  loss.cpp  probe.cpp
src/io/: atomic_writer.cpp
src/math/: activation.cpp  color.cpp  coordinate_frame.cpp  covariance.cpp  quaternion.cpp  sh_rotation.cpp
src/metal/: gaussian_fitter.mm  gaussian_processor.mm  metal_compute.mm  metal_compute_provider.mm
src/runtime/: backend_registration.cpp
tests/: test_atomic_writer.cpp  test_cli.sh  test_cloud_inspector.cpp  test_compute_provider.cpp  test_convert_cli.py  test_densifier.cpp  test_gaussians_from_prediction.py  test_glb_container.cpp  test_gltf_accessor.cpp  test_gltf_document.cpp  test_gltf_extensions.cpp  test_gltf_khr.cpp  test_gltf_reader.cpp  test_gltf_resolve.cpp  test_gltf_scene.cpp  test_gltf_transform.cpp  test_gltf_writer.cpp  test_gradient_check.mm  test_inspect_cli.py  test_loss_report.cpp  test_math_oracle.cpp  test_melkor_core.cpp  test_ply_budget.cpp  test_ply_color.cpp  test_ply_roundtrip_fuzz.cpp  test_probe.cpp  test_provenance.cpp  test_release_evidence.py  test_release_metadata.py  test_safety_substrate.cpp  test_scene.cpp  test_scene_edit.cpp  test_sh_rotation.cpp  test_spz_budget.cpp  test_spz_quaternion_fuzz.cpp  test_spz_stub_api.cpp  test_tools.py
tests/install/consumer-c/: CMakeLists.txt  main.c
tests/install/consumer-cpp/: CMakeLists.txt  main.cpp
tools/: build_source_bundle.py  check_claims.py  check_profiles.py  check_version_sync.py  generate_notices.py  verify_third_party.py
tools/da3/: inference.py  multigpu_inference.py
viewer/: .gitignore  ASSET_PROVENANCE.md  README.md  RUST_THIRD_PARTY_LICENSES.html  THIRD_PARTY_NOTICES.md  fetch-assets.sh  index.html  make-4d-demo.js  make-static-demo.js  pack-4d.js  package-lock.json  package.json  playwright.config.js  serve.js  stage-dist.js
viewer/src-tauri/: Cargo.toml  about.hbs  about.toml  deny.toml  tauri.conf.json
viewer/tests/: viewer.spec.js
(+33 files in other folders)
